# Project4-Backend

./: README.MD  dump.sql  dumpdeployment.sql  pyproject.toml
Checklists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Checklists/migrations/: 0001_initial.py  0002_alter_checklist_amount.py  0002_alter_checklist_description.py  0003_remove_checklist_amount.py  0003_rename_extrafromchecklistamount_inventoryitem_extra_from_checklist_amount_and_more.py  0004_checklist_chcklist_sections_and_more.py  0004_checklist_department.py  0005_delete_inventoryitem_delete_subsection_delete_task_and_more.py  0006_rename_cheklist_sections_checklist_checklist_sections.py  0007_remove_checklist_checklist_sections.py  0008_checklist_inventory_items_checklist_sales_target_and_more.py
Departments/: admin.py  models.py  seeds.json  serializers.py  urls.py  views.py
Departments/migrations/: 0001_initial.py  0002_department_workers.py  0003_remove_department_workers_department_workers.py  0004_alter_department_workers.py
InventoryItems/: admin.py  models.py  serializers.py  urls.py  views.py
Posts/: admin.py  models.py  serializers.py  urls.py  views.py
ShiftWorkers/: apps.py  models.py
Shifts/: admin.py  models.py  serializers.py  urls.py  views.py
Subsections/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Tasks/: admin.py  models.py  serializers.py  urls.py  views.py
Users/: models.py  serializers.py  urls.py  views.py
Workers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/: settings.py  urls.py
(+59 files in other folders)
